# lumentix

./: .env.example  README.md  package-lock.json
.github/workflows/: contract.yml
backend/: .env.example  package-lock.json  package.json
backend/src/: app.module.ts  main.ts
backend/src/admin/: admin.service.spec.ts  admin.service.ts
backend/src/currencies/: currencies.module.ts  currencies.service.ts
backend/src/events/: events.controller.ts  events.service.ts
backend/src/exchange-rates/: exchange-rates.module.ts  exchange-rates.service.ts
backend/src/payments/: payments.controller.ts  payments.service.ts
backend/src/stellar/: stellar.service.spec.ts  stellar.service.ts
backend/src/transactions/: transactions.controller.ts  transactions.module.ts  transactions.service.ts
contract/: .gitignore  Cargo.toml  ERRORS.md  Makefile  README.md  SETUP.md  TEST_RESULTS.md  USAGE_EXAMPLES.md
contract/hello_world/: Cargo.toml
contract/src/: error.rs  lib.rs  storage.rs  test.rs  types.rs  validation.rs
contract/src/contract/: mod.rs
contract/src/events/: mod.rs
contract/src/models/: mod.rs
contract/src/tests/: mod.rs
frontend/: package.json  test-stellar-integration.js
frontend/app/: page.tsx
frontend/components/: WalletConnect.tsx
frontend/contexts/: WalletContext.tsx
frontend/hooks/: useStellarWallet.ts
frontend/types/: wallet.ts
src/: app.module.ts
src/audit/: audit.service.ts
src/events/: events.controller.spec.ts  events.controller.ts  events.service.spec.ts  events.service.ts
src/payments/: escrow.module.ts  payments.controller.ts  payments.module.ts  payments.service.ts
src/stellar/: stellar.service.ts
(+33 files in other folders)
